# stecs

./: Cargo.toml  LICENSE  README.md  brainstorm.rs
benches/: bench.rs
derive/: Cargo.toml
derive/src/: archetype_set.rs  entity.rs  lib.rs  query.rs  query_shared.rs  utils.rs
derive/src/entity/: enum.rs  struct.rs
examples/: brainstorm.rs  flat.rs  game.rs  miri.rs  query.rs
src/: archetype.rs  archetype_set.rs  arena.rs  column.rs  data.rs  entity.rs  lib.rs  query.rs  secondary.rs  storage.rs  world.rs
src/column/: iter.rs
src/query/: borrow_checker.rs  fetch.rs  iter.rs  join.rs  nest.rs  nest2.rs  stream.rs  uniform.rs
src/secondary/: column.rs  query.rs  world.rs
src/storage/: iter.rs
