[package]
name = "stecs"
version = "0.1.0"
edition = "2021"

[dependencies]
stecs-derive = { path = "derive" }
thunderdome = "0.6.1"
downcast-rs = "1.2.0"
derivative = "2.2.0"
serde = { version = "1.0", features = ["derive"], optional = true }
fxhash = "0.2.1"

[dev-dependencies]
bencher = "0.1.5"
serde = { version = "1.0", features = ["derive"] }

[workspace]
members = ["derive"]

[[bench]]
name = "bench"
harness = false

[profile.release]
debug = true
